// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompactPagination should handle last page click properly 1`] = `
<DocumentFragment>
  <div
    class="sc-AxiKw bpKMZT"
    data-testid="Pagination"
  >
    <button
      class="sc-AxjAm ddJBbC"
      color="primary"
      data-testid="CompactCompactPagination__first"
      disabled=""
      type="button"
    >
      <div
        class="sc-AxirZ hDwaov"
        height="12"
        width="12"
      >
        <svg>
          pagination-first.svg
        </svg>
      </div>
    </button>
    <button
      class="sc-AxjAm ddJBbC"
      color="primary"
      data-testid="CompactPagination__previous"
      disabled=""
      type="button"
    >
      <div
        class="sc-AxirZ fttODj"
        height="10"
        width="10"
      >
        <svg>
          back.svg
        </svg>
      </div>
    </button>
    <div
      class="flex text-sm items-center px-4 py-2 rounded bg-theme-primary-contrast text-theme-primary"
    >
      Page 1 of 3
    </div>
    <button
      class="sc-AxjAm ddJBbC"
      color="primary"
      data-testid="CompactPagination__next"
      type="button"
    >
      <div
        class="sc-AxirZ hDwaov"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
    <button
      class="sc-AxjAm ddJBbC"
      color="primary"
      data-testid="CompactPagination__last"
      type="button"
    >
      <div
        class="sc-AxirZ hDwaov"
        height="12"
        width="12"
      >
        <svg>
          pagination-last.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CompactPagination should handle next page click properly 1`] = `
<DocumentFragment>
  <div
    class="sc-AxiKw bpKMZT"
    data-testid="Pagination"
  >
    <button
      class="sc-AxjAm ddJBbC"
      color="primary"
      data-testid="CompactCompactPagination__first"
      type="button"
    >
      <div
        class="sc-AxirZ hDwaov"
        height="12"
        width="12"
      >
        <svg>
          pagination-first.svg
        </svg>
      </div>
    </button>
    <button
      class="sc-AxjAm ddJBbC"
      color="primary"
      data-testid="CompactPagination__previous"
      type="button"
    >
      <div
        class="sc-AxirZ fttODj"
        height="10"
        width="10"
      >
        <svg>
          back.svg
        </svg>
      </div>
    </button>
    <div
      class="flex text-sm items-center px-4 py-2 rounded bg-theme-primary-contrast text-theme-primary"
    >
      Page 2 of 3
    </div>
    <button
      class="sc-AxjAm ddJBbC"
      color="primary"
      data-testid="CompactPagination__next"
      type="button"
    >
      <div
        class="sc-AxirZ hDwaov"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
    <button
      class="sc-AxjAm ddJBbC"
      color="primary"
      data-testid="CompactPagination__last"
      type="button"
    >
      <div
        class="sc-AxirZ hDwaov"
        height="12"
        width="12"
      >
        <svg>
          pagination-last.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CompactPagination should handle previous page click properly 1`] = `
<DocumentFragment>
  <div
    class="sc-AxiKw bpKMZT"
    data-testid="Pagination"
  >
    <button
      class="sc-AxjAm ddJBbC"
      color="primary"
      data-testid="CompactCompactPagination__first"
      type="button"
    >
      <div
        class="sc-AxirZ hDwaov"
        height="12"
        width="12"
      >
        <svg>
          pagination-first.svg
        </svg>
      </div>
    </button>
    <button
      class="sc-AxjAm ddJBbC"
      color="primary"
      data-testid="CompactPagination__previous"
      type="button"
    >
      <div
        class="sc-AxirZ fttODj"
        height="10"
        width="10"
      >
        <svg>
          back.svg
        </svg>
      </div>
    </button>
    <div
      class="flex text-sm items-center px-4 py-2 rounded bg-theme-primary-contrast text-theme-primary"
    >
      Page 2 of 3
    </div>
    <button
      class="sc-AxjAm ddJBbC"
      color="primary"
      data-testid="CompactPagination__next"
      type="button"
    >
      <div
        class="sc-AxirZ hDwaov"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
    <button
      class="sc-AxjAm ddJBbC"
      color="primary"
      data-testid="CompactPagination__last"
      type="button"
    >
      <div
        class="sc-AxirZ hDwaov"
        height="12"
        width="12"
      >
        <svg>
          pagination-last.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CompactPagination should render properly 1`] = `
<DocumentFragment>
  <div
    class="sc-AxiKw bpKMZT"
    data-testid="Pagination"
  >
    <button
      class="sc-AxjAm ddJBbC"
      color="primary"
      data-testid="CompactCompactPagination__first"
      disabled=""
      type="button"
    >
      <div
        class="sc-AxirZ hDwaov"
        height="12"
        width="12"
      >
        <svg>
          pagination-first.svg
        </svg>
      </div>
    </button>
    <button
      class="sc-AxjAm ddJBbC"
      color="primary"
      data-testid="CompactPagination__previous"
      disabled=""
      type="button"
    >
      <div
        class="sc-AxirZ fttODj"
        height="10"
        width="10"
      >
        <svg>
          back.svg
        </svg>
      </div>
    </button>
    <div
      class="flex text-sm items-center px-4 py-2 rounded bg-theme-primary-contrast text-theme-primary"
    >
      Page 1 of 3
    </div>
    <button
      class="sc-AxjAm ddJBbC"
      color="primary"
      data-testid="CompactPagination__next"
      type="button"
    >
      <div
        class="sc-AxirZ hDwaov"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
    <button
      class="sc-AxjAm ddJBbC"
      color="primary"
      data-testid="CompactPagination__last"
      type="button"
    >
      <div
        class="sc-AxirZ hDwaov"
        height="12"
        width="12"
      >
        <svg>
          pagination-last.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;
